[package]
name = "tonic-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tonic = "0.7.1"
tonic-build = "0.7.0"

[build-dependencies]
tonic-build = "0.7"
